cabal-version:       2.2
name:                S3
version:             0.1.0.0

synopsis:            Client library for accessing Amazon S3 compatible storage services
license:             GPL-2.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
homepage:            https://github.com/hvr/S3
category:            Network
build-type:          Simple

library
  default-language:  Haskell2010
  exposed-modules:   Network.S3
  other-modules:     Internal
  build-depends:     base                  >= 4.8 && <4.13
                   , cryptohash-md5       ^>= 0.11.7.2
                   , cryptohash-sha1      ^>= 0.11.100
                   , bytestring           ^>= 0.10.8
                   , base64-bytestring    ^>= 1.0
                   , base16-bytestring    ^>= 0.1
                   , unordered-containers ^>= 0.2.7
                   , time                 ^>= 1.6
                                       || ^>= 1.8.0.2
                   , http-streams         ^>= 0.8
                   , io-streams           ^>= 1.3
                   , xml                  ^>= 1.3
                   , deepseq              ^>= 1.4
                   , hashable             ^>= 1.2.4

  if !impl(ghc >= 8.0)
    build-depends: semigroups ^>= 0.18

  hs-source-dirs:    src

  ghc-options:       -Wall