cabal-version:       2.2
name:                S3
version:             0.1.0.0

synopsis:            Client library for accessing Amazon S3 compatible storage services
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
homepage:            https://github.com/hvr/S3
category:            Network
build-type:          Simple

library
  default-language:  Haskell2010
  exposed-modules:   Network.S3
  other-modules:     Internal
  build-depends:
    , Prelude              ^>= 0.1.0.1
    , X                    ^>= 0.3.0
    , base-encoding        ^>= 0.1.0
    , bytestring           ^>= 0.10
    , cryptohash-md5       ^>= 0.11.7.2
    , cryptohash-sha1      ^>= 0.11.100
    , deepseq              ^>= 1.3 || ^>= 1.4
    , http-io-streams      ^>= 0.1.0.0
    , hashable             ^>= 1.2.4
    , io-streams           ^>= 1.5
    , text                 ^>= 1.2.3
    , text-short           ^>= 0.1.2
    , time                 ^>= 1.6
                        || ^>= 1.8.0.2

  if impl(ghc >= 7.10)
     build-depends: base (>= 4.8.0.0 && < 4.12) || ^>= 4.12.0.0
     mixins: base hiding (Prelude)
  else
     build-depends: base-noprelude ^>= 4.7.0.0

  hs-source-dirs:    src

  ghc-options:       -Wall
